SONARJAVA-4091 Use of Java 17 feature should not lead to a warning message